sc updates